--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -74,7 +74,14 @@
         var returnDriverMsg;
 
         let arrayOF_areasObj = [];
-        const { validateMobileNum, addSeperator2MobileNum, convertDBDate2FrontEndDate } = GENERAL.USEFULL_FUNCTIONS;
+
+        const {
+
+            validateMobileNum,
+            addSeperator2MobileNum,
+            convertDBDate2FrontEndDate,
+
+        } = GENERAL.USEFULL_FUNCTIONS;
 
         function wiringDataTables() {
             //manage button clicks on tables
@@ -899,7 +906,65 @@
             });
         }
 
-        function confirmDelete(ridePat, table) {
+        function confirmDelete(deleteBtn, table) {
+
+            let ridePatNum = parseInt(deleteBtn.name);
+
+            //IMMUTABLE paradigme !
+            const original_deleteCandidate = arr_rides.find((r) => r.RidePatNum === ridePatNum);
+
+
+            let deleteCandidate = {
+                ...original_deleteCandidate,
+                Date: convertDBDate2FrontEndDate(original_deleteCandidate.Date)
+            }
+
+
+            let isAfterNoon = deleteCandidate.Date.getMinutes() === 14;
+            let isToday = table.context[0].sTableId === "datatable-afternoon" || table.context[0].sTableId === "datatable-morning";
+
+            const { DisplayName } = deleteCandidate.Pat;
+            const { Name: from } = deleteCandidate.Origin;
+            const { Name: to } = deleteCandidate.Destination;
+            const { Date: date } = deleteCandidate; //Date is a reserved word for js! DO NOT ASSIGHN !!!
+
+            let msg2user = `מחיקת ההסעה של ${DisplayName} מ: ${from} ל: ${to} `;
+
+            msg2user += isToday ? 'היום ' :
+                `יציאה בתאריך ${date.toLocaleString('he-IL', { dateStyle: 'short' })} `;
+
+            msg2user += isAfterNoon ? 'בשעות אחה"צ ' :
+                `בשעה ${date.toLocaleString('he-IL', { timeStyle: 'short' })} `;
+
+            swal({
+                title: "هل انت متأكد?\nהאם אתם בטוחים?",
+                type: "warning",
+                text: msg2user,
+                showCancelButton: true,
+                cancelButtonText: "الغاء\nבטל",
+                confirmButtonClass: 'btn-warning',
+                confirmButtonText: "حذف\nמחיקה",
+                closeOnConfirm: true
+            }, function (userResponse) {
+                if (userResponse) {
+                    deleteRidePat(original_deleteCandidate, 'delete');
+                }
+               
+            });
+
+
+            /*
+
+                    if (returnRidePat) {
+
+                    }
+                    else {
+                        setTimeout(function () { refreshTable() }, 1001);
+                    }
+             */
+
+            //#region old way of confirmDelete(ridePat, table)
+            /*
             $.ajax({
                 dataType: "json",
                 url: "WebService.asmx/getRidePat",
@@ -1053,6 +1118,10 @@
                     sendMessegeFromAssistant(arr_details.RidePatNum, user, pushMsg);
                 }
             });
+
+            */
+            //#endregion
+
         }
 
         const candidatesButton = (btn) => {
@@ -1104,6 +1173,7 @@
 
         function deleteRidePat(ridePat, func) {
             checkCookie();
+            $('#wait').show();
             // var numberOfRides = 1;
             //var repeatRide = "";
             let ridePatNums2MarkDeleted = [];
@@ -1124,24 +1194,61 @@
                         showConfirmButton: false
                     });
 
-                    if (returnRidePat) {
-                        if (hospitals.includes(returnRidePat.Destination.Name)) {
-                            $('#messagesModal').modal('hide');
-                            $('#DriverReturnRidePatMsg').html("");
-                            setTimeout(function () { refreshTable() }, 1001);
-                        } else {
-                            if (returnRidePat.Coordinator.DisplayName != GENERAL.USER.getUserDisplayName()) {
-                                closeModal()
-                            } else {
-                                $("#returnRidePatMsg").text(returnRidePatMsg);
-                                $("#messagesModal").modal();
-                            }
+                    setTimeout(refreshTable, 1001);
 
+
+                    let RidePat = {
+                        Date: convertDBDate2FrontEndDate(ridePat.Date),
+                        Destination: ridePat.Destination,
+                        Origin: ridePat.Origin,
+                        Pat: ridePat.Pat
+                    }
+
+                    $.ajax({
+                        dataType: "json",
+                        url: "WebService.asmx/getReturnRidePat",
+                        contentType: "application/json; charset=utf-8",
+                        type: "POST",
+                        async: false,
+                        data: JSON.stringify({ RidePat }),
+                        success: function (data) {
+
+                            returnRidePat = JSON.parse(data.d);
+
+                            if (returnRidePat.Status !== 'נמחקה') {// נמצאה החזרה
+                                $('#wait').hide();
+
+                                let patientName = 'חולה';
+                                if (!returnRidePat.Pat.DisplayName.includes("אנונימי")) {
+                                    patientName = returnRidePat.Pat.DisplayName;
+                                }
+                                let frontEndDate = convertDBDate2FrontEndDate(returnRidePat.Date);
+
+                                if (frontEndDate.getMinutes() === 14) {//afternoon
+                                    frontEndDate = `תאריך ${frontEndDate.toLocaleDateString('he-IL')} בשעות אחה"צ`;
+                                } else {
+                                    frontEndDate = frontEndDate.toLocaleString('he-IL', { dateStyle: 'short', timeStyle: 'short' });
+                                }
+
+                                returnRidePatMsg = `האם למחוק גם את ההחזרה של ${patientName} מ${returnRidePat.Origin.Name} ל${returnRidePat.Destination.Name} ב${frontEndDate}`;
+                                $('#DriverReturnRidePatMsg').html("");
+                                if (returnRidePat.Drivers.length != 0) {
+                                    returnDriverMsg = returnRidePat.Drivers[0].DisplayName + " נרשם להחזרה הזו!";
+                                    $('#DriverReturnRidePatMsg').html("<h5 style='color:red; font-weight: bold;'>שימו לב!</h5><h5>" + returnRidePat.Drivers[0].DisplayName + " נרשם להחזרה הזו!</h5>");
+                                }
+
+                                $('#returnRidePatMsg').html(returnRidePatMsg);
+                                $('#messagesModal').modal('toggle');
+                            } else {
+                                $('#wait').hide();
+                                setTimeout(refreshTable, 1001);
+                            }
+                        },
+                        error: function (err) {
+                            alert("Error in getReturnRidePat: " + err.responseText);
+                            console.log(err);
                         }
-                    }
-                    else {
-                        setTimeout(function () { refreshTable() }, 1001);
-                    }
+                    })
                 },
                 error: function (err) { alert("Error in deleteRidePat:" + err.responseText); }
             });
@@ -1159,8 +1266,8 @@
 
             var RidePat = new Object();
             RidePat.RidePatNum = returnRidePat.RidePatNum;
-            var tempDate = dateReturn;
-            tempDate = "01/01/1970"; // Fictional date for deletion
+         //   var tempDate = dateReturn; --wtf ?! YOGEV disable it
+            var tempDate = "01/01/1970"; // Fictional date for deletion
             var tempDateReveresed = tempDate.split('/').reverse().join('/')
             var date3 = new Date(tempDateReveresed);
             RidePat.Date = date3;
@@ -1191,25 +1298,28 @@
 
             //הסטטוס 'אין נסיעת הלוך' עושה בעיות כיוון שלא ניתן להשתבץ אליו.
             //newStatus = "אין נסיעת הלוך"
-            newStatus = "ממתינה לשיבוץ"
 
-            ReturnRidePatNum = returnRidePat.RidePatNum
-            $.ajax({
-                dataType: "json",
-                url: "WebService.asmx/changeRidePatStatus",
-                contentType: "application/json; charset=utf-8",
-                type: "POST",
-                //async: false,
-                data: JSON.stringify({ newStatus: newStatus, ridePatNum: ReturnRidePatNum }),
-                success: function (data) {
-                    console.log(data.d)
-                    setTimeout(function () { refreshTable() }, 1001);
-                },
-                error: function (err) {
 
-                    alert("Error in changeRidePatStatus: " + err.responseText);
-                }
-            });
+            //UNNECESSARY CALL TO BACKEND YOGEV DISABLED IT ON 02/05/2021
+            //newStatus = "ממתינה לשיבוץ"
+
+            //ReturnRidePatNum = returnRidePat.RidePatNum
+            //$.ajax({
+            //    dataType: "json",
+            //    url: "WebService.asmx/changeRidePatStatus",
+            //    contentType: "application/json; charset=utf-8",
+            //    type: "POST",
+            //    //async: false,
+            //    data: JSON.stringify({ newStatus: newStatus, ridePatNum: ReturnRidePatNum }),
+            //    success: function (data) {
+                  
+            //        setTimeout(function () { refreshTable() }, 1001);
+            //    },
+            //    error: function (err) {
+
+            //        alert("Error in changeRidePatStatus: " + err.responseText);
+            //    }
+            //});
 
             //setTimeout(function () { refreshTable() }, 1001);
         }
